# ToastEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.bat  editor.bat  game.bat  run.bat  run_editor.bat  run_game.bat
Editor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  defines.h  engine.cpp  vulkanEngine.cpp  vulkanEngine.hpp
Engine/src/common/: file.cpp  file.hpp  log.cpp  log.hpp
Engine/src/core/: log.cpp  log.hpp  window.cpp  window.hpp
Engine/src/vulkan/: device.cpp  device.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  instanceLogger.cpp  instanceManager.cpp  instanceManager.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vklog.cpp  vklog.hpp  vulkanConfig.hpp
Game/: CMakeLists.txt  main.cpp
Resources/shaders/: compile.bat  shader.vert
